[package]
name = "pumpfun-trigger"
version = "0.1.0"
edition = "2021"

[features]
default = []
dry-run = []
no-filter = []

[[bin]]
name = "pumpfun-trigger"
path = "src/main.rs"

[dependencies]
unshred = { path = "../.." }

anyhow = "1.0.98"
base64 = "0.22.1"
bincode = "=1.3.3"
clap = { version = "4.5.32", features = ["derive", "env"] }
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
solana-client = "=2.3.1"
solana-sdk = "=2.3.1"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
